--- a/chat_betas/src/views/index.ejs
+++ b/chat_betas/src/views/index.ejs
@@ -2,12 +2,13 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<title>Bienvenido a Sharkht!</title>
 	
 	<!-- Para que cargue al inicio -->
 
 	<link rel="stylesheet" type="text/css" href="./css/home_style.css">
-	 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	 
 	
 
@@ -27,7 +28,7 @@
 			</div>
 			<div id="abajo">
 				<input type="text" class="inputDatos" id="Correo" placeholder="Correo electronico">
-				<input type="text" class="inputDatos" id="Contraseña" placeholder="Contraseña">
+				<input type="password" class="inputDatos" id="Contraseña" placeholder="Contraseña">
 				
 				<input type="submit" id="login-button" class ="mandar" value="Login">
 
@@ -40,6 +41,7 @@
     </div>
     
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="./js/funciones.js"></script>
+	<script src="./js/funciones.js"></script>
+	<script src="./js/funciones_jq.js"></script>
 </body>
 </html>
