--- a/chat_betas/src/views/chat.ejs
+++ b/chat_betas/src/views/chat.ejs
@@ -14,7 +14,11 @@
 <body>
     <div class="Principal-home">
 
- <div id="Principal-contacts" style="display: none;" data-id-personal="<%= data[0].idUsuario %>">
+<% if (locals.data) { %>
+    <div id="Principal-contacts" style="display: none;" data-id-personal="<%= data[0].idUsuario %>">
+<% } else {%>
+    <div id="Principal-contacts" style="display: none;">
+<% } %>
 
        <div class="ourUser">
            <div id="ourUser-picture">
@@ -77,7 +81,7 @@
 
         </div>
          <div id="message-content">
-
+            <% if (typeof data != 'undefined') { %>
             <% for(let i = 0; i < data.length; i++) { %>
                 <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
                    <div id="img-in">
@@ -92,6 +96,9 @@
                        </div>
                    </div>
                 </div>
+            <% } %>
+            <% } else { %>
+                <h3>No tienes amigos agregados</h3>
             <% } %>
 
          </div>
@@ -151,19 +158,25 @@
             <div class="letter">
                 <p>Contacts</p>
             </div>
-
+            <% if(data) { %>
             <% for(let i = 0; i < data.length; i++) { %>
                 <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
                    <div id="img-in">
                         <div id="userInPict"><img src="img/user.svg" ></div>
                    </div>
-
                    <div id="datos-in">
                        <div id="name-in">
-                           <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
+                           <%if(data) { %>
+                                <h3 id="<%= data[i].idUsuarioAgregado %>"><%= data[i].nombreContacto %></h3>
+                            <% } else { %>
+                                <h3></h3>
+                            <% } %>
                        </div>
                    </div>
                 </div>
+            <% } %>
+            <% } else { %>
+                <h4>No tienes amigos agregados</h4>
             <% } %>
         </div>
         <!-- ... -->
@@ -187,7 +200,6 @@
             <div class="search">
                 <input type="text" class="search_bar" placeholder="search">
             </div>
-
             <% for(let i = 0; i < data.length; i++) { %>
                 <div class="message-in" data-id-contact="<%= data[i].idUsuarioAgregado %>"> 
                    <div id="img-in">
